remove redundant vars